{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 54,
  "lineage": "e3ad6185-a39d-a0a2-65b5-30e81388c82d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0953476d60561c955",
            "arn": "arn:aws:ec2:us-east-1:420517237696:instance/i-0f2cd5c0234ea3f30",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "proyecto-2-ec2-profile",
            "id": "i-0f2cd5c0234ea3f30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00cc480fcb8554612",
            "private_dns": "ip-10-0-1-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.24",
            "public_ip": "54.90.178.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-077d6a4e3c010601f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057e672888de168db",
            "tags": {
              "Name": "proyecto-2-instance"
            },
            "tags_all": {
              "Name": "proyecto-2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a96d206befe7a54f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420517237696:internet-gateway/igw-003098b673604ff69",
            "id": "igw-003098b673604ff69",
            "owner_id": "420517237696",
            "tags": {
              "Name": "proyecto-2-igw"
            },
            "tags_all": {
              "Name": "proyecto-2-igw"
            },
            "vpc_id": "vpc-0552ad5b6798ce8dc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420517237696:route-table/rtb-0d22f8ba90a00ba5e",
            "id": "rtb-0d22f8ba90a00ba5e",
            "owner_id": "420517237696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003098b673604ff69",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proyecto-2-public-rt"
            },
            "tags_all": {
              "Name": "proyecto-2-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0552ad5b6798ce8dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061f4cf4c700dcfb4",
            "route_table_id": "rtb-0d22f8ba90a00ba5e",
            "subnet_id": "subnet-057e672888de168db"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420517237696:security-group/sg-0a96d206befe7a54f",
            "description": "Allow inbound traffic for microservice and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a96d206befe7a54f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic to microservice port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "proyecto-2-ec2-sg",
            "name_prefix": "",
            "owner_id": "420517237696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proyecto-2-ec2-sg"
            },
            "tags_all": {
              "Name": "proyecto-2-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0552ad5b6798ce8dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420517237696:subnet/subnet-057e672888de168db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057e672888de168db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420517237696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proyecto-2-public-subnet"
            },
            "tags_all": {
              "Name": "proyecto-2-public-subnet"
            },
            "vpc_id": "vpc-0552ad5b6798ce8dc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420517237696:vpc/vpc-0552ad5b6798ce8dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083169be249414aa0",
            "default_route_table_id": "rtb-039ff6b60e9082210",
            "default_security_group_id": "sg-0f04bc1115c321f62",
            "dhcp_options_id": "dopt-05d6a32f9d604ac96",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0552ad5b6798ce8dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039ff6b60e9082210",
            "owner_id": "420517237696",
            "tags": {
              "Name": "proyecto-2-vpc"
            },
            "tags_all": {
              "Name": "proyecto-2-vpc"
            }
          }
        }
      ]
    }
  ]
}